// 2.55 Change Log
// Updated 18th July, 2020

//Alpha 78
Added the global pointer class 'Module->' to ZScript.
Added int Module->GetInt(char32 *section, char32 *element);
Added void Module->GetString(char32 *buffer, char32 *section, char32 *element);
	( ZoriaRPG, 19th July, 2020 )
	
//Alpha 77
Fixed the script name reports in error messages, adding new
	types and correcting the offsets.
Using a function or a variable on null pointer will now give its on
	error message.
Fix params for CreateLWeapon.
Added new weapon variable, specialinfo, used at present by wWind lweapons.
	This *should* fix wind warps.
Fixed some weapon constructors in Link.cpp.
Added lwpn->Special to ZScript
Changed the subscreen code so that if a script forces a weapon to A or B, that
	the subscreen does not refuse to display it when aout of ammo.
	( ZoriaRPG, 18th July, 2020 )
	
Add access to dmapdata-> for subscreen script vars
Fix zscript string functions truncating at 256 chars
	( Venrob, 18th July, 2020 )
	
<std.zh 1.7104> 
	Added constants for minimum, maximum, and count of counter types.
	Fixed typo on IC_WPN_CUSTOM_* chain of constants.
Fix lexer state not clearing
	( Venrob, 18th July, 2020 )

//Alpha 76
Fix 'npc->LinedUp()' return *10000
	( Venrob, 16th July, 2020 )
	
<std 1.7103> Add 'SHD_' constants for shadow types on strings.
Add shadows to DrawString as an overload
	( Venrob, 15th July, 2020 )	

Fix 'qr_SCRIPTSDRAWINWARPS'
Allow passive subscript to run during death anim
Update ZSA; #includeif / is_included
Fix multiple importstrs on one line not working
	( Venrob, 14th July, 2020 )	

Fixed error messages for invald GOTO type instructions.
Fixed possible crash on invalid gotos from logging args order.
Epilepsy Protection is now set when you launch a NEW INSTALL of ZC,
immediately prior to loaing the player interface.
	If the zc.cfg value 'checked_epilepsy' is not present, or is set 
	to '0', then ZC will ask the user if they want this enabled