@@ -2732,6 +2732,8 @@ enum ASM_DEFINE
 	
 	DRAWSTRINGR2,
 	BMPDRAWSTRINGR2,
+	
+	MODULEGETIC,
 
 	NUMCOMMANDS           //0x0192
 };
